scroll View in description View Controller

--- a/Grains/Base.lproj/Main.storyboard
+++ b/Grains/Base.lproj/Main.storyboard
@@ -114,58 +114,74 @@
         <scene sceneID="sv4-gH-MHs">
             <objects>
                 <viewController id="zn7-Ny-qAU" customClass="DescriptionViewController" customModule="Grains" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="X6O-e7-6ns">
+                    <view key="view" contentMode="scaleToFill" id="X6O-e7-6ns" userLabel="Description View Controller">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="1200"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IpP-YK-448">
-                                <rect key="frame" x="0.0" y="-18" width="414" height="1180"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tZS-NY-NMt">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="1200"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wFy-ih-5RN">
-                                        <rect key="frame" x="8" y="43" width="434" height="1092"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D91-P5-lgq">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1131"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0vf-SM-sC9">
-                                                <rect key="frame" x="194" y="158" width="46" height="52"/>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fzs-Lw-0ee">
+                                                <rect key="frame" x="87" y="886" width="240" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="46" id="3Cr-1o-J9C"/>
+                                                    <constraint firstAttribute="width" constant="240" id="ghd-KK-vFL"/>
+                                                    <constraint firstAttribute="height" constant="128" id="rQ4-4s-iMe"/>
                                                 </constraints>
-                                                <state key="normal" title="Button"/>
-                                            </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ID0-U9-NdJ">
-                                                <rect key="frame" x="189" y="884" width="42" height="103"/>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Buckwheat" translatesAutoresizingMaskIntoConstraints="NO" id="Pnq-vd-eSH">
+                                                <rect key="frame" x="87" y="30" width="240" height="128"/>
+                                                <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="42" id="01i-JX-BDZ"/>
+                                                    <constraint firstAttribute="width" constant="240" id="Onq-zY-Who"/>
+                                                    <constraint firstAttribute="height" constant="128" id="SOW-ZI-aQl"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CMH-S3-EFh">
+                                                <rect key="frame" x="87" y="458" width="240" height="128"/>
+                                                <color key="backgroundColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="240" id="U9P-g9-LH7"/>
+                                                    <constraint firstAttribute="height" constant="128" id="fak-97-1D2"/>
+                                                </constraints>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="ID0-U9-NdJ" secondAttribute="bottom" constant="146" id="8Gr-eS-eA6"/>
-                                            <constraint firstAttribute="bottom" secondItem="0vf-SM-sC9" secondAttribute="bottom" constant="708" id="Lfj-P9-Dqt"/>
-                                            <constraint firstItem="0vf-SM-sC9" firstAttribute="top" secondItem="wFy-ih-5RN" secondAttribute="top" constant="158" id="cN6-At-gey"/>
-                                            <constraint firstItem="ID0-U9-NdJ" firstAttribute="top" secondItem="wFy-ih-5RN" secondAttribute="topMargin" constant="979" id="cbc-8f-0SJ"/>
-                                            <constraint firstItem="ID0-U9-NdJ" firstAttribute="top" secondItem="0vf-SM-sC9" secondAttribute="bottom" constant="777" id="s8P-t7-jVx"/>
+                                            <constraint firstItem="fzs-Lw-0ee" firstAttribute="top" secondItem="CMH-S3-EFh" secondAttribute="bottom" constant="300" id="0fG-h6-bvu"/>
+                                            <constraint firstItem="CMH-S3-EFh" firstAttribute="leading" secondItem="D91-P5-lgq" secondAttribute="leading" constant="87" id="885-Mf-hob"/>
+                                            <constraint firstItem="CMH-S3-EFh" firstAttribute="top" secondItem="Pnq-vd-eSH" secondAttribute="bottom" constant="300" id="BxS-L0-Rio"/>
+                                            <constraint firstAttribute="trailing" secondItem="fzs-Lw-0ee" secondAttribute="trailing" constant="87" id="HE7-bg-Eru"/>
+                                            <constraint firstAttribute="trailing" secondItem="CMH-S3-EFh" secondAttribute="trailing" constant="87" id="Lgf-oE-Q3H"/>
+                                            <constraint firstAttribute="bottom" secondItem="fzs-Lw-0ee" secondAttribute="bottom" constant="117" id="M9L-va-a6O"/>
+                                            <constraint firstAttribute="trailing" secondItem="Pnq-vd-eSH" secondAttribute="trailing" constant="87" id="NTf-4F-LBl"/>
+                                            <constraint firstItem="fzs-Lw-0ee" firstAttribute="leading" secondItem="D91-P5-lgq" secondAttribute="leading" constant="87" id="VdY-d0-Cqu"/>
+                                            <constraint firstItem="Pnq-vd-eSH" firstAttribute="top" secondItem="D91-P5-lgq" secondAttribute="top" constant="30" id="deg-6P-dtM"/>
+                                            <constraint firstItem="Pnq-vd-eSH" firstAttribute="leading" secondItem="D91-P5-lgq" secondAttribute="leading" constant="87" id="mow-lr-e03"/>
                                         </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="wFy-ih-5RN" firstAttribute="top" secondItem="IpP-YK-448" secondAttribute="top" constant="-20" id="70Z-X3-aCM"/>
-                                    <constraint firstAttribute="bottom" secondItem="wFy-ih-5RN" secondAttribute="bottom" id="UcB-FX-F3X"/>
-                                    <constraint firstAttribute="trailing" secondItem="wFy-ih-5RN" secondAttribute="trailing" constant="-20" id="cLZ-TV-k1P"/>
-                                    <constraint firstItem="wFy-ih-5RN" firstAttribute="leading" secondItem="IpP-YK-448" secondAttribute="leading" id="g3q-Pn-ohu"/>
-                                    <constraint firstItem="wFy-ih-5RN" firstAttribute="width" secondItem="IpP-YK-448" secondAttribute="width" constant="20" id="jCb-Qc-jkI"/>
+                                    <constraint firstAttribute="trailing" secondItem="D91-P5-lgq" secondAttribute="trailing" id="1jj-wK-r5p"/>
+                                    <constraint firstItem="D91-P5-lgq" firstAttribute="width" secondItem="tZS-NY-NMt" secondAttribute="width" id="4bY-aN-fDh"/>
+                                    <constraint firstAttribute="bottom" secondItem="D91-P5-lgq" secondAttribute="bottom" id="7JF-Wy-2yz"/>
+                                    <constraint firstItem="D91-P5-lgq" firstAttribute="height" secondItem="tZS-NY-NMt" secondAttribute="height" priority="250" id="fOV-pT-Fed"/>
+                                    <constraint firstItem="D91-P5-lgq" firstAttribute="top" secondItem="tZS-NY-NMt" secondAttribute="top" id="hpm-Ir-He9"/>
+                                    <constraint firstItem="D91-P5-lgq" firstAttribute="leading" secondItem="tZS-NY-NMt" secondAttribute="leading" id="pRv-NE-XId"/>
                                 </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Uqd-sm-Hid"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="e0I-7q-2eg"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="IpP-YK-448" secondAttribute="bottom" id="2xZ-KM-LyP"/>
-                            <constraint firstItem="IpP-YK-448" firstAttribute="leading" secondItem="lHJ-36-u23" secondAttribute="leading" id="eAf-Qt-Aa5"/>
-                            <constraint firstItem="IpP-YK-448" firstAttribute="trailing" secondItem="lHJ-36-u23" secondAttribute="trailing" id="sTR-fg-ZhH"/>
-                            <constraint firstItem="IpP-YK-448" firstAttribute="top" secondItem="X6O-e7-6ns" secondAttribute="top" constant="20" symbolic="YES" id="twP-bO-zMW"/>
+                            <constraint firstItem="tZS-NY-NMt" firstAttribute="leading" secondItem="lHJ-36-u23" secondAttribute="leading" id="3c0-W7-drJ"/>
+                            <constraint firstItem="tZS-NY-NMt" firstAttribute="bottom" secondItem="lHJ-36-u23" secondAttribute="bottom" constant="83" id="hFN-RD-rzJ"/>
+                            <constraint firstItem="lHJ-36-u23" firstAttribute="trailing" secondItem="tZS-NY-NMt" secondAttribute="trailing" id="mNm-CI-67c"/>
+                            <constraint firstItem="lHJ-36-u23" firstAttribute="top" secondItem="tZS-NY-NMt" secondAttribute="top" constant="88" id="nAM-qx-zMv"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lHJ-36-u23"/>
                     </view>
@@ -176,7 +192,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kDJ-r8-sax" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1968.1159420289857" y="200.89285714285714"/>
+            <point key="canvasLocation" x="1711.5942028985507" y="77.678571428571431"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="bjp-qs-dS0">
@@ -235,8 +251,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Buckwheat" width="180" height="180"/>
         <image name="heart" catalog="system" width="64" height="54"/>
-        <image name="timer" width="256" height="256"/>
         <image name="timer" catalog="system" width="64" height="60"/>
+        <image name="timer" width="256" height="256"/>
     </resources>
 </document>
