--- a/Grains/Base.lproj/Main.storyboard
+++ b/Grains/Base.lproj/Main.storyboard
@@ -128,9 +128,6 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="406"/>
                                                 <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             </imageView>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="likeMe.png" translatesAutoresizingMaskIntoConstraints="NO" id="5HA-aC-2iR">
-                                                <rect key="frame" x="329" y="45" width="71" height="75"/>
-                                            </imageView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zxg-6q-PF7" userLabel="Description viewOutlet">
                                                 <rect key="frame" x="19" y="637" width="376" height="527"/>
                                                 <subviews>
@@ -254,15 +251,24 @@
                                                     <constraint firstItem="3Mf-I0-Rew" firstAttribute="top" secondItem="r76-Ov-Wcx" secondAttribute="top" constant="61" id="y1a-8g-oTt"/>
                                                 </constraints>
                                             </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aN9-tT-Gko">
+                                                <rect key="frame" x="341" y="20" width="54" height="44"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="54" id="e9Y-VY-jhH"/>
+                                                    <constraint firstAttribute="height" constant="46.5" id="f3v-Rb-XLd"/>
+                                                </constraints>
+                                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <state key="normal" title="  " backgroundImage="suit.heart" catalog="system"/>
+                                                <connections>
+                                                    <action selector="addToFavButAction:" destination="zn7-Ny-qAU" eventType="touchUpInside" id="fDG-1s-ql9"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstItem="zxg-6q-PF7" firstAttribute="trailing" secondItem="r76-Ov-Wcx" secondAttribute="trailing" id="1sQ-G8-KEH"/>
                                             <constraint firstItem="Pnq-vd-eSH" firstAttribute="width" secondItem="D91-P5-lgq" secondAttribute="width" id="76i-Qd-oVF"/>
-                                            <constraint firstItem="Pnq-vd-eSH" firstAttribute="top" secondItem="5HA-aC-2iR" secondAttribute="bottom" constant="-120" id="9Uh-Jt-mVE"/>
                                             <constraint firstItem="r76-Ov-Wcx" firstAttribute="leading" secondItem="D91-P5-lgq" secondAttribute="leading" constant="19" id="9rt-3c-h2n"/>
-                                            <constraint firstItem="5HA-aC-2iR" firstAttribute="leading" secondItem="Pnq-vd-eSH" secondAttribute="trailing" constant="-85" id="BNr-ky-TBc"/>
-                                            <constraint firstItem="5HA-aC-2iR" firstAttribute="width" secondItem="Pnq-vd-eSH" secondAttribute="width" multiplier="0.171498" id="C4o-3K-mrd"/>
                                             <constraint firstItem="zxg-6q-PF7" firstAttribute="leading" secondItem="r76-Ov-Wcx" secondAttribute="leading" id="Go7-X9-6k7"/>
                                             <constraint firstItem="Pnq-vd-eSH" firstAttribute="centerX" secondItem="D91-P5-lgq" secondAttribute="centerX" id="ILf-Ul-BAP"/>
                                             <constraint firstAttribute="trailing" secondItem="Pnq-vd-eSH" secondAttribute="trailing" id="NTf-4F-LBl"/>
@@ -276,8 +282,9 @@
                                             <constraint firstItem="Pnq-vd-eSH" firstAttribute="leading" secondItem="D91-P5-lgq" secondAttribute="leading" id="mow-lr-e03"/>
                                             <constraint firstItem="Pnq-vd-eSH" firstAttribute="width" secondItem="D91-P5-lgq" secondAttribute="height" multiplier="18:53" id="o62-Hu-PQ5"/>
                                             <constraint firstAttribute="bottom" secondItem="Pnq-vd-eSH" secondAttribute="bottom" constant="813" id="qdd-DA-lu0"/>
-                                            <constraint firstItem="5HA-aC-2iR" firstAttribute="height" secondItem="Pnq-vd-eSH" secondAttribute="height" multiplier="0.184729" id="tc2-Mu-OeN"/>
+                                            <constraint firstItem="aN9-tT-Gko" firstAttribute="top" secondItem="D91-P5-lgq" secondAttribute="top" constant="18" id="sHu-2t-QWV"/>
                                             <constraint firstItem="zxg-6q-PF7" firstAttribute="top" secondItem="r76-Ov-Wcx" secondAttribute="bottom" constant="35" id="wrD-Ti-pu5"/>
+                                            <constraint firstAttribute="trailing" secondItem="aN9-tT-Gko" secondAttribute="trailing" constant="19" id="xNe-ab-plQ"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -307,6 +314,7 @@
                     </navigationItem>
                     <size key="freeformSize" width="414" height="1200"/>
                     <connections>
+                        <outlet property="addToFavButOut" destination="aN9-tT-Gko" id="McG-yV-MbL"/>
                         <outlet property="boilTimeLabOut" destination="fZ0-xf-Iwn" id="4hk-eE-5f3"/>
                         <outlet property="calLabOut" destination="SRX-wF-Ab7" id="Hyj-VN-lW3"/>
                         <outlet property="calMainDescLabOut" destination="Ha7-B9-Yb1" id="9Ai-Pm-fnw"/>
@@ -387,7 +395,7 @@
         <image name="Buckwheat" width="180" height="180"/>
         <image name="fire.png" width="384" height="384"/>
         <image name="heart" catalog="system" width="64" height="54"/>
-        <image name="likeMe.png" width="512" height="512"/>
+        <image name="suit.heart" catalog="system" width="64" height="54"/>
         <image name="timer" catalog="system" width="64" height="60"/>
         <image name="timer" width="256" height="256"/>
         <image name="timer 2.png" width="512" height="512"/>
